visibility issues

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-image: url(../assets/images/background.webp);
+  background-image: url(./assets/images/background.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center ;
